@@ -1,13 +1,8 @@
 #!/bin/bash
-# example: ./run.sh data/wi29.tsp /tmp/out.points
-
-./pre-process.sh $1 >/tmp/tsp.points
-
-java -Djava.library.path=target/lib \
-	-server \
-	-XX:+TieredCompilation \
-	-XX:+AggressiveOpts \
-	-Xmx2048m \
-	-cp target/tsp.jar:. \
-	net.parasec.tsp.TSPMain /tmp/tsp.points $2
-
+HEAP=8192m
+IN=data/rat783.points
+OUT=/tmp/rat.out
+ALGO=gls_fls
+MAX_RUNS=1000000
+ALPHA=0.025
+java -Djava.library.path=target/lib -Xmx${HEAP} -cp target/tsp.jar:. net.parasec.tsp.TSPMain ${IN} ${OUT} ${ALGO} ${MAX_RUNS} ${ALPHA}
